# rinex-cli

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: benchmarks.yml  daily.yml  release.yml  rust.yml
demos/: ABSOLUTE_TIME.sh  ANDROID_RINEX.sh  BDS_ONLY.md  BEIDOU_1.sh  CBIN.md  DIFF.md  GAL_ONLY.md  GPSGAL_DUAL.md  GPS_ONLY.md  GPS_ONLY_GST.md  GPS_ONLY_UTC.md  NAV_CSV.md  PEDESTRIAN_ARCTIC_SURVEY.sh  PPP_PEDESTRIAN.md  PPP_ROAMING_PEDESTRIAN.md  README.md  STATIC_POSTFIT_DENOISING.md  SURVEY.md  ZERO_REPAIR_PPP.md
demos/dynamic-ppp/: README.md
demos/gpst/: gps-only-utc.md  gpst-utc.sh
demos/ppp-code-smoothing/: README.md  ppp-no-smoothing.json
demos/static-ppp-48h/: README.md
demos/ultra-ppp-48h/: README.md
demos/zero-repair-ppp/: README.md
documentation/: CBin.md  Diff.md  FileLoading.md  FileProduction.md  Filegen.md  Input.md  InputOutput.md  Merge.md  PPP.md  Preprocessor.md  Split.md  TBin.md
examples/: README.md
examples/CGGTTS/: README.md
examples/CGGTTS/BRDC/: README.md
examples/CGGTTS/BRDC/CPP/: README.md  esbjerg-l1l2.sh  mojn-b1b2.sh  mojn-e1e5.sh  mojn-l1l2.sh
examples/CGGTTS/BRDC/PPP/: mojn-e1e5.sh
examples/CGGTTS/BRDC/SPP/: esbjerg-l1.sh  esbjerg-l5.sh  mojn-b1.sh  mojn-e1.sh  mojn-e5.sh
examples/CGGTTS/FINAL/: README.md
examples/CGGTTS/FINAL/CPP/: README.md  esbjerg-l1l2.sh  mojn-b1b2.sh  mojn-e1e5.sh  mojn-l1l2.sh
examples/CGGTTS/FINAL/PPP/: README.md  mojn-e1e5.sh
examples/CGGTTS/FINAL/SPP/: README.md  esbjerg-l1.sh  esbjerg-l5.sh  mojn-b1.sh  mojn-e1.sh  mojn-e5.sh
examples/CGGTTS/ULTRA/: README.md
examples/CGGTTS/ULTRA/CPP/: README.md  mojn-e1e5.sh
examples/CGGTTS/ULTRA/PPP/: README.md  mojn-e1e5.sh
examples/CONFIG/: README.md  gpst_cpp.json  gpst_ppp.json  gst_cpp.json
examples/CONFIG/CPP/: basic.json
examples/CONFIG/Dynamic/: pedestrian_ppp.json
examples/CONFIG/PPP/: basic.json
examples/CONFIG/SPP/: basic.json  code_smoothing.json
examples/CONFIG/Static/: README.md  bdt_cpp.json  gpst_cpp.json  gpst_postfit_cpp.json  gpst_postfit_ppp.json  gpst_ppp.json  gpst_spp.json  gst_cpp.json  utc_cpp.json
examples/CONFIG/Static/PPP/: basic.json  postfit.json
examples/CONFIG/Static/SPP/: README.md
examples/PPP/: README.md
examples/PPP/BRDC/: README.md  esbjerg-brdc.sh
examples/PPP/BRDC/CPP/: README.md  esbjerg-l1-l2.sh  esbjerg-l1l2.sh  mojn-b1b2.sh  mojn-e1e5.sh  mojn-gps-gal.sh  mojn-l1l2.sh
examples/PPP/BRDC/PPP/: README.md  mojn-e1e5.sh
examples/PPP/BRDC/SPP/: README.md  esbjerg-gps.sh  esbjerg-l1.sh  esbjerg-l5.sh  mojn-b1.sh  mojn-e1.sh  mojn-e5.sh
examples/PPP/FINAL/: README.md
examples/PPP/FINAL/CPP/: README.md  esbjerg-l1l2.sh  mojn-e1e5.sh  mojn-l1l2.sh
examples/PPP/FINAL/SPP/: README.md  esbjerg-l1.sh  esbjerg-l5.sh  mojn-b1.sh  mojn-e1.sh  mojn-e5.sh
examples/PPP/ULTRA/: README.md
examples/PPP/ULTRA/CPP/: README.md  mojn-b1b2.sh  mojn-e1e5.sh  mojn-l1l2.sh  mojn-l1l5.sh
examples/PPP/ULTRA/PPP/: README.md  mojn-e1e5.sh  mojn-l1l2.sh
src/: main.rs  preprocessing.rs  report.rs
src/cli/: mod.rs  positioning.rs
src/cli/fops/: cbin.rs  mod.rs  split.rs  tbin.rs
src/fops/: cbin.rs  csv.rs  diff.rs  filegen.rs  merge.rs  mod.rs  split.rs  tbin.rs
src/graph/: csv.rs
src/positioning/: buffer.rs  clock.rs  coords.rs  eph.rs  mod.rs  orbit.rs  precise.rs  snapshot.rs  time.rs
src/positioning/cggtts/: mod.rs  post_process.rs  report.rs
src/positioning/ppp/: mod.rs  post_process.rs  report.rs
tools/: download-data.sh
