[package]
name = "rinex-cli"
version = "0.12.1"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX and SP3 data post processing tool"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/rinex-cli"
keywords = ["geo", "gps", "rinex", "galileo", "timing"]
categories = [
    "science",
    "command-line-interface",
    "command-line-utilities",
]
edition = "2021"
readme = "README.md"
exclude = [
    "data/*",
]

[package.metadata]
msrv = "1.82"

[features]
# PPP and PPP+CGGTTS are not supported by default, because they are quite heavy.
default = ["csv"]

# Activate PVT solutions solver (ppp command-line option)
ppp = [
    "dep:gnss-rtk",
    "gnss-qc/navigation",
    "gnss-qc/embed_ephem",
]

# Activate the CGGTTS solutions solver (ppp with --cggtts command-line option)
cggtts = [
    "ppp",
    "dep:gnss-rtk",
    "dep:cggtts",
    "gnss-qc/navigation",
]

[dependencies.rinex]
git = "https://github.com/rtk-rs/rinex"
branch = "main"
features = [
    "qc", 
    "processing", 
    "obs", 
    "nav", 
    "ut1", 
    "meteo", 
    "clock", 
    "ionex", 
    "antex", 
    "serde",
]

[dependencies]
log = "0.4"
walkdir = "2.4.0"
geo-types = "0.7.11"
env_logger = "0.11"
serde_json = "1"
lazy_static = "1.4"
thiserror = "2"
itertools = "0.14"
map_3d = "0.1.5"

maud = "0.27"
plotly = "0.9"

clap = { version = "4.4.13", features = ["derive", "color"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

kml = { version = "0.8.6", optional = true }
gpx = { version = "0.10", optional = true }
csv = { version = "1.3.0", optional = true }

anise = { git = "https://github.com/nyx-space/anise", branch = "dep/hifitime-github", features = ["embed_ephem"] }
hifitime = { git = "https://github.com/nyx-space/hifitime", branch = "master", features = ["serde", "std"] }

# gnss-qc = { version = "0.1.0", features = ["sp3"] } 
gnss-qc = { git = "https://github.com/rtk-rs/gnss-qc", branch = "main", features = ["sp3", "navigation", "flate2"] } 

gnss-rs = { git = "https://github.com/rtk-rs/gnss", branch = "main", features = ["serde"] }

# gnss-rtk = { path = "../gnss-rtk", features = ["serde", "embed_ephem"], optional = true }
gnss-rtk = { git = "https://github.com/rtk-rs/gnss-rtk", branch = "main", features = ["serde", "embed_ephem"], optional = true }

cggtts = { git = "https://github.com/rtk-rs/cggtts", branch = "main", features = ["serde", "scheduler", "tracker"], optional = true }
