[package]
name = "rinex-cli"
version = "0.12.1"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX and SP3 data post processing tool"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/rinex-cli"
keywords = ["geo", "gps", "rinex", "galileo", "timing"]
categories = [
    "science",
    "command-line-interface",
    "command-line-utilities",
]
edition = "2021"
readme = "README.md"
exclude = [
    "data/*",
]

[package.metadata]
msrv = "1.82"

[features]
# PPP and PPP+CGGTTS are not supported by default, because they are quite heavy.
default = ["csv"]

# Activate PVT solutions solver (ppp command-line option)
ppp = [
    "dep:gnss-rtk",
    "gnss-qc/navigation",
    "gnss-qc/embed_ephem",
]

# Activate the CGGTTS solutions solver (ppp with --cggtts command-line option)
cggtts = [
    "ppp",
    "dep:gnss-rtk",
    "dep:cggtts",
    "gnss-qc/navigation",
]

[dependencies.rinex]
git = "https://github.com/rtk-rs/rinex"
rev = "d4bac64ba7f03ec2665e440cef11dba5ef1a38e7"
features = [
    "qc", 
    "processing", 
    "obs", 
    "nav", 
    "ut1", 
    "meteo", 
    "clock", 
    "ionex", 
    "antex", 
    "serde",
]

[dependencies]
log = "0.4"
walkdir = "2.4.0"
geo-types = "0.7.11"
env_logger = "0.11"
serde_json = "1"
lazy_static = "1.4"
thiserror = "2"
itertools = "0.14"
maud = "0.26"
plotly = "0.9"
kml = { version = "0.8.6", optional = true }
gpx = { version = "0.10", optional = true }
csv = { version = "1.3.0", optional = true }
gnss-rs = { version = "2.4.0", features = ["serde"] }
clap = { version = "4.4.13", features = ["derive", "color"] }
hifitime = { version = "4.1.0", features = ["serde", "std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
cggtts = { version = "4.3.0", features = ["serde", "scheduler", "tracker"], optional = true }
anise = { git = "https://github.com/nyx-space/anise", branch = "dep/hifitime_4_1_0", features = ["embed_ephem"] }
gnss-qc = { git = "https://github.com/rtk-rs/gnss-qc", rev = "2324c8720fbcaa4c6ef9906244ccd31540a709c8", features = ["sp3", "navigation", "flate2"] } 

# gnss-rtk = { path = "../gnss-rtk", features = ["serde", "embed_ephem"], optional = true }
gnss-rtk = { git = "https://github.com/rtk-rs/gnss-rtk", rev = "1455e3a600ea27def1c9550359d27461cb7e8be5", features = ["serde", "embed_ephem"], optional = true }

