[package]
name = "rinex-cli"
version = "0.13.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX and SP3 data post processing tool"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/rinex-cli"
keywords = ["geo", "gps", "rinex", "galileo", "timing"]
categories = [
    "science",
    "command-line-interface",
    "command-line-utilities",
]
edition = "2021"
readme = "README.md"
exclude = [
    "data/*",
]

[package.metadata]
msrv = "1.82"

[features]
# PPP and PPP+CGGTTS are not supported by default, because they are quite heavy.
default = ["csv"]

# Activate PVT solutions solver (ppp command-line option)
ppp = [
    "dep:gnss-rtk",
    "gnss-qc/navigation",
    "gnss-qc/embed_ephem",
]

# Activate the CGGTTS solutions solver (ppp with --cggtts command-line option)
cggtts = [
    "ppp",
    "dep:gnss-rtk",
    "dep:cggtts",
    "gnss-qc/navigation",
]

[dependencies.rinex]
version = "0.18"
features = [
    "qc", 
    "processing", 
    "obs", 
    "nav", 
    "ut1", 
    "meteo", 
    "clock", 
    "ionex", 
    "antex", 
    "serde",
]

[dependencies.gnss-rtk]
git = "https://github.com/rtk-rs/gnss-rtk"
rev = "5eb681c3f6f123d36b1c5b46cf27429bcf45f3f7"
optional = true
features = [
    "serde",
    "embed_ephem"
]

[dependencies]
log = "0.4"
walkdir = "2.4.0"
geo-types = "0.7.11"
env_logger = "0.11"
serde_json = "1"
lazy_static = "1.4"
thiserror = "2"
itertools = "0.14"
maud = "0.26"
plotly = "0.9"
kml = { version = "0.8.6", optional = true }
gpx = { version = "0.10", optional = true }
csv = { version = "1.3.0", optional = true }
gnss-rs = { version = "2.4", features = ["serde"] }
clap = { version = "4.4.13", features = ["derive", "color"] }
hifitime = { version = "4.1", features = ["serde", "std"] }
anise = { version = "0.6", features = ["embed_ephem"] }
gnss-qc = { version = "0.2", features = ["sp3", "navigation", "flate2"] } 
serde = { version = "1.0", default-features = false, features = ["derive"] }
cggtts = { version = "4.3", features = ["serde", "scheduler", "tracker"], optional = true }
